--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   <!-- seo includes setting the title <title>{{ site.title }} </title>-->
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"> 
+  <link rel="shortcut icon" href="/assets/favicon.ico">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
         {%- include google-analytics.html -%}
